- Downsize to 1 central event bus - Add a compiler pass for subscribing services tagged with 'culturefeedd_udb3.event_bus.subscriber' to the event bus

--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -53,16 +53,6 @@ services:
   culturefeed_udb3.event_bus_factory:
     class: Drupal\culturefeed_udb3\EventBusFactory
 
-  # General services for read models
-  # Event bus to which read models can emit events.
-  culturefeed_udb3.read_models_event_bus:
-    class: CultuurNet\UDB3\SimpleEventBus
-    factory_service: culturefeed_udb3.event_bus_factory
-    factory_method: get
-    # A list of event bus subscribers that are subscribed to the event bus on first publication.
-    # Don't use @ in front of them, these services will be loaded on-demand.
-    arguments: [['culturefeed_udb3.eventld_projector']]
-
   # Place
   # Place: ld repository
   culturefeed_udb3.place.ld_repository:
@@ -77,17 +67,12 @@ services:
     arguments: ['@url_generator', 'culturefeed_udb3.place']
   culturefeed_udb3.place.ld_projector:
     class: CultuurNet\UDB3\Place\PlaceLDProjector
-    arguments: ['@culturefeed_udb3.place.ld_repository', '@culturefeed_udb3.place.iri_generator', '@culturefeed_udb3.read_models_event_bus']
-  culturefeed_udb3.place.event_bus:
-    class: CultuurNet\UDB3\SimpleEventBus
-    factory_service: culturefeed_udb3.event_bus_factory
-    factory_method: get
-    # A list of event bus subscribers that are subscribed to the event bus on first publication.
-    # Don't use @ in front of them, these services will be loaded on-demand.
-    arguments: [['culturefeed_udb3.place.ld_projector']]
+    arguments: ['@culturefeed_udb3.place.ld_repository', '@culturefeed_udb3.place.iri_generator', '@culturefeed_udb3.event_bus']
+    tags:
+      - { name: 'culturefeed_udb3.event_bus.subscriber' }
   culturefeed_udb3.place.local_repository:
     class: CultuurNet\UDB3\Place\PlaceRepository
-    arguments: ['@culturefeed_udb3.place.store', '@culturefeed_udb3.place.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
+    arguments: ['@culturefeed_udb3.place.store', '@culturefeed_udb3.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
   culturefeed_udb3.place.repository_factory:
     class: Drupal\culturefeed_udb3\PlaceRepositoryFactory
     arguments: ['@culturefeed_udb3.place.local_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
@@ -114,17 +99,12 @@ services:
     arguments: ['@url_generator', 'culturefeed_udb3.organizer']
   culturefeed_udb3.organizer.ld_projector:
     class: CultuurNet\UDB3\Organizer\OrganizerLDProjector
-    arguments: ['@culturefeed_udb3.organizer.ld_repository', '@culturefeed_udb3.organizer.iri_generator', '@culturefeed_udb3.read_models_event_bus']
-  culturefeed_udb3.organizer.event_bus:
-    class: CultuurNet\UDB3\SimpleEventBus
-    factory_service: culturefeed_udb3.event_bus_factory
-    factory_method: get
-    # A list of event bus subscribers that are subscribed to the event bus on first publication.
-    # Don't use @ in front of them, these services will be loaded on-demand.
-    arguments: [['culturefeed_udb3.organizer.ld_projector']]
+    arguments: ['@culturefeed_udb3.organizer.ld_repository', '@culturefeed_udb3.organizer.iri_generator', '@culturefeed_udb3.event_bus']
+    tags:
+      - { name: 'culturefeed_udb3.event_bus.subscriber' }
   culturefeed_udb3.organizer.local_repository:
     class: CultuurNet\UDB3\Organizer\OrganizerRepository
-    arguments: ['@culturefeed_udb3.organizer.store', '@culturefeed_udb3.organizer.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
+    arguments: ['@culturefeed_udb3.organizer.store', '@culturefeed_udb3.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
   culturefeed_udb3.organizer.repository_factory:
     class: Drupal\culturefeed_udb3\OrganizerRepositoryFactory
     arguments: ['@culturefeed_udb3.organizer.local_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
@@ -144,13 +124,15 @@ services:
   culturefeed_udb3.eventld_projector:
     class: CultuurNet\UDB3\Event\EventLDProjector
     arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.iri_generator', '@culturefeed_udb3.event.service', '@culturefeed_udb3.place.service', '@culturefeed_udb3.organizer.service']
+    tags:
+      - { name: 'culturefeed_udb3.event_bus.subscriber' }
+  # Central event bus where domain events are published to. You can subscribe
+  # your services to the event bus by tagging them with
+  # 'culturefeed_udb3.event_bus.subscriber'
   culturefeed_udb3.event_bus:
     class: CultuurNet\UDB3\SimpleEventBus
     factory_service: culturefeed_udb3.event_bus_factory
     factory_method: get
-    # A list of event bus subscribers that are subscribed to the event bus on first publication.
-    # Don't use @ in front of them, these services will be loaded on-demand.
-    arguments: [['culturefeed_udb3.eventld_projector', 'culturefeed_udb3.event_relations_projector']]
   culturefeed_udb3.event_store:
     class: Drupal\culturefeed_udb3\EventStore
     arguments: ['event_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
@@ -221,3 +203,5 @@ services:
   culturefeed_udb3.event_relations_projector:
     class: CultuurNet\UDB3\Event\ReadModel\Relations\Projector
     arguments: ['@culturefeed_udb3.event_relations_repository']
+    tags:
+      - { name: 'culturefeed_udb3.event_bus.subscriber' }
