--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
       "cultuurnet/search": "~1.0",
       "cultuurnet/cdb": "~2.0",
-      "cultuurnet/culturefeed-php": "~1.0"
+      "cultuurnet/culturefeed-php": "~1.0",
+      "cultuurnet/calendar-summary": "~1.0"
     },
     "require-dev": {
       "phing/phing": "~2.10"
