MSS-160: Add account editing form

--- a/culturefeed_ui/culturefeed_ui.routing.yml
+++ b/culturefeed_ui/culturefeed_ui.routing.yml
@@ -18,3 +18,13 @@ culturefeed_ui.profile_form:
   requirements:
     _culturefeed_current_user: 'TRUE'
 
+culturefeed_ui.account_form:
+  path: '/culturefeed/account/edit'
+  defaults:
+    _form: '\Drupal\culturefeed_ui\Form\AccountForm'
+    _title: 'Edit account'
+  options:
+    _access_mode: 'ANY'
+  requirements:
+    _culturefeed_current_user: 'TRUE'
+
