MSS-162: Added sitemap-xml library.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
       "cultuurnet/search": "~1.0",
       "cultuurnet/cdb": "~2.0",
       "cultuurnet/culturefeed-php": "~1.0",
-      "cultuurnet/calendar-summary": "~1.0"
+      "cultuurnet/calendar-summary": "~1.0",
+      "cultuurnet/sitemap-xml": "~0.1"
     },
     "require-dev": {
       "phing/phing": "~2.10"
