MSS-160: Add connected accounts fieldset and port functionality

--- a/culturefeed_ui/culturefeed_ui.routing.yml
+++ b/culturefeed_ui/culturefeed_ui.routing.yml
@@ -38,4 +38,37 @@ culturefeed_ui.delete_account_form:
   requirements:
     _culturefeed_current_user: 'TRUE'
 
+culturefeed_ui.connected_accounts.disconnect:
+  path: '/culturefeed/connected-account/{account_type}/{account_name}/disconnect'
+  defaults:
+    _controller: '\Drupal\culturefeed_ui\Controller\ConnectedAccountsController::disconnect'
+    _title: 'Disconnect culturefeed user from external account'
+  options:
+    _access_mode: 'ANY'
+  requirements:
+    _culturefeed_current_user: 'TRUE'
+    _method: GET
+
+culturefeed_ui.connected_accounts.make_private:
+  path: '/culturefeed/connected-account/{account_type}/{account_name}/make-private'
+  defaults:
+    _controller: '\Drupal\culturefeed_ui\Controller\ConnectedAccountsController::makePrivate'
+    _title: 'Make all culturefeed activities private for the connected account'
+  options:
+    _access_mode: 'ANY'
+  requirements:
+    _culturefeed_current_user: 'TRUE'
+    _method: GET
+
+culturefeed_ui.connected_accounts.make_public:
+  path: '/culturefeed/connected-account/{account_type}/{account_name}/make-public'
+  defaults:
+    _controller: '\Drupal\culturefeed_ui\Controller\ConnectedAccountsController::makePublic'
+    _title: 'Make all culturefeed activities public for the connected account'
+  options:
+    _access_mode: 'ANY'
+  requirements:
+    _culturefeed_current_user: 'TRUE'
+    _method: GET
+
 
