MSS-160: Include old .po files and import them on module install and update

--- a/culturefeed_ui/culturefeed_ui.info.yml
+++ b/culturefeed_ui/culturefeed_ui.info.yml
@@ -6,4 +6,5 @@ version: 1.x-dev
 package: Culturefeed
 dependencies:
   - culturefeed
-
+'interface translation project': culturefeed_ui
+'interface translation server pattern': modules/culturefeed/culturefeed_ui/translations/%project.%language.po
