--- a/culturefeed_ui/culturefeed_ui.info.yml
+++ b/culturefeed_ui/culturefeed_ui.info.yml
@@ -6,5 +6,6 @@ version: 1.x-dev
 package: Culturefeed
 dependencies:
   - culturefeed
+  - locale
 'interface translation project': culturefeed_ui
 'interface translation server pattern': modules/culturefeed/culturefeed_ui/translations/%project.%language.po
