--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "Apache-2.0",
     "require": {
       "composer/composer": "~1.0",
+      "mobiledetect/mobiledetectlib": "dev-master",
       "cultuurnet/search": "~1.2",
       "cultuurnet/cdb": "~2.1",
       "cultuurnet/culturefeed-php": "~1.5",
